Revert "chore: fix cve (#279)"
This reverts commit ffd8b9b362121a59acb51608c01729401ee6e77c.